feat: completed transfer_learning through generator.

--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +521,71 @@
       "130 images processed\n",
       "140 images processed\n",
       "150 images processed\n",
-      "160 images processed\n"
+      "160 images processed\n",
+      "170 images processed\n",
+      "180 images processed\n",
+      "190 images processed\n",
+      "200 images processed\n",
+      "210 images processed\n",
+      "220 images processed\n",
+      "230 images processed\n",
+      "240 images processed\n",
+      "250 images processed\n",
+      "260 images processed\n",
+      "270 images processed\n",
+      "280 images processed\n",
+      "290 images processed\n",
+      "300 images processed\n",
+      "310 images processed\n",
+      "320 images processed\n",
+      "330 images processed\n",
+      "340 images processed\n",
+      "350 images processed\n",
+      "360 images processed\n",
+      "370 images processed\n",
+      "380 images processed\n",
+      "390 images processed\n",
+      "400 images processed\n",
+      "410 images processed\n",
+      "420 images processed\n",
+      "430 images processed\n",
+      "440 images processed\n",
+      "450 images processed\n",
+      "460 images processed\n",
+      "470 images processed\n",
+      "480 images processed\n",
+      "490 images processed\n",
+      "500 images processed\n",
+      "510 images processed\n",
+      "520 images processed\n",
+      "530 images processed\n",
+      "540 images processed\n",
+      "550 images processed\n",
+      "560 images processed\n",
+      "570 images processed\n",
+      "580 images processed\n",
+      "590 images processed\n",
+      "600 images processed\n",
+      "610 images processed\n",
+      "620 images processed\n",
+      "630 images processed\n",
+      "640 images processed\n",
+      "650 images processed\n",
+      "660 images processed\n",
+      "670 images processed\n",
+      "680 images processed\n",
+      "690 images processed\n",
+      "700 images processed\n",
+      "710 images processed\n",
+      "720 images processed\n",
+      "730 images processed\n",
+      "740 images processed\n",
+      "750 images processed\n",
+      "760 images processed\n",
+      "770 images processed\n",
+      "780 images processed\n",
+      "790 images processed\n",
+      "799 images processed\n"
      ]
     }
    ],
@@ -575,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -603,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -633,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -668,30 +732,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
-    "ss = StratifiedShuffleSplit(n_splits=3, test_size=0.2)\n",
-    "splitter = ss.split()\n",
+    "ss = StratifiedShuffleSplit(n_splits=1, test_size=0.2)\n",
+    "train_idx, val_idx = next(ss.split(codes, labels))\n",
     "\n",
+    "half_val = int(len(val_idx)/2)\n",
+    "val_idx, test_idx = val_idx[:half_val], val_idx[half_val:]\n",
     "\n",
-    "train_x, train_y = \n",
-    "val_x, val_y = \n",
-    "test_x, test_y =  "
+    "train_x, train_y = codes[train_idx], labels_vecs[train_idx]\n",
+    "val_x, val_y = codes[val_idx], labels_vecs[val_idx]\n",
+    "test_x, test_y = codes[test_idx], labels_vecs[test_idx] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shapes (x, y): (2936, 4096) (2936, 5)\n",
+      "Validation shapes (x, y): (367, 4096) (367, 5)\n",
+      "Test shapes (x, y): (367, 4096) (367, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train shapes (x, y):\", train_x.shape, train_y.shape)\n",
     "print(\"Validation shapes (x, y):\", val_x.shape, val_y.shape)\n",
@@ -724,21 +796,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "inputs_ = tf.placeholder(tf.float32, shape=[None, codes.shape[1]])\n",
     "labels_ = tf.placeholder(tf.int64, shape=[None, labels_vecs.shape[1]])\n",
     "\n",
     "# TODO: Classifier layers and operations\n",
+    "fc = tf.contrib.layers.fully_connected(input_, 256)\n",
     "\n",
-    "logits = # output layer logits\n",
-    "cost = # cross entropy loss\n",
+    "logits = tf.contrib.layers.fully_connected(fc, labels_vecs.shape[1], activation_fn=None) # output layer logits\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=labels_, logits=logits)\n",
+    "cost = tf.reduce_mean(logits)\n",
     "\n",
-    "optimizer = # training optimizer\n",
+    "optimizer = tf.train.AdamOptimizer().minimize(cost)\n",
     "\n",
     "# Operations for validation/test accuracy\n",
     "predicted = tf.nn.softmax(logits)\n",
@@ -757,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
