feat: completed linear regression notebook.

--- a/linear-regression/Regression.ipynb
+++ b/linear-regression/Regression.ipynb
@@ -657,15 +657,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58.534321417553969"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Write the prediction function\n",
     "def predict(m, b, bmi):\n",
-    "    pass"
+    "    return m[0]*bmi + b[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "m, b = linear_regression(x, y)\n",
+    "laos_life_exp = predict(m, b, bmi=21.07931)\n",
+    "laos_life_exp"
    ]
   },
   {
