--- a/semi-supervised/semi-supervised_learning_2.ipynb
+++ b/semi-supervised/semi-supervised_learning_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,10 +46,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SVHN Training Set:   3%|▎         | 6.00M/182M [00:21<1:27:29, 33.5KB/s]"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
