feat: Completed up to generator.

--- a/semi-supervised/semi-supervised_learning_2.ipynb
+++ b/semi-supervised/semi-supervised_learning_2.ipynb
@@ -45,14 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SVHN Training Set:   3%|▎         | 6.00M/182M [00:21<1:27:29, 33.5KB/s]"
+      "SVHN Training Set: 182MB [02:23, 1.27MB/s]                              \n",
+      "SVHN Training Set: 64.3MB [00:21, 2.99MB/s]                            \n"
      ]
     }
    ],
