added lstm cells.

--- a/sentiment-rnn/Sentiment_RNN.ipynb
+++ b/sentiment-rnn/Sentiment_RNN.ipynb
@@ -706,13 +706,13 @@
    "source": [
     "with graph.as_default():\n",
     "    # Your basic LSTM cell\n",
-    "    lstm = \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell()\n",
     "    \n",
     "    # Add dropout to the cell\n",
-    "    drop = \n",
+    "    drop = tf.contrib.rnn.DropoutWrapper()\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell()\n",
     "    \n",
     "    # Getting an initial state of all zeros\n",
     "    initial_state = cell.zero_state(batch_size, tf.float32)"
