Completed through project 6.'

--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -5207,7 +5207,7 @@
     "        # TODO: Run a forward pass through the network, like you did in the\n",
     "        #       \"train\" function. That means use the given review to \n",
     "        #       update the input layer, then calculate values for the hidden layer,\n",
-    "        #       and finally calculate the output layer.\n",
+    "        #       and finally calculate the output layer\n",
     "        #\n",
     "        #       Note: The review passed into this function for prediction \n",
     "        #             might come from anywhere, so you should convert it \n",
