Completed thought cell 4.

--- a/IMDB-keras/IMDB_In_Keras.ipynb
+++ b/IMDB-keras/IMDB_In_Keras.ipynb
@@ -226,6 +226,9 @@
    "outputs": [],
    "source": [
     "# TODO: Build the model architecture\n",
+    "model = Sequential()\n",
+    "model2 = Dense()\n",
+    "\n",
     "\n",
     "# TODO: Compile the model using a loss function and an optimizer.\n"
    ]
