feat: Completed output formula function.

--- a/gradient-descent/GradientDescent.ipynb
+++ b/gradient-descent/GradientDescent.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "# Output (prediction) formula\n",
     "def output_formula(features, weights, bias):\n",
-    "    pass\n",
+    "    sigmoid(np.dot(weights, features) + bias)\n",
     "\n",
     "# Error (log-loss) formula\n",
     "def error_formula(y, output):\n",
