feat: Completed all funcions in GradientDecent.

--- a/gradient-descent/GradientDescent.ipynb
+++ b/gradient-descent/GradientDescent.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -108,15 +108,18 @@
     "\n",
     "# Output (prediction) formula\n",
     "def output_formula(features, weights, bias):\n",
-    "    sigmoid(np.dot(weights, features) + bias)\n",
+    "    return sigmoid(np.dot(weights, features) + bias)\n",
     "\n",
     "# Error (log-loss) formula\n",
     "def error_formula(y, output):\n",
-    "    pass\n",
+    "    return -y*np.log(output) - (1-y) * np.log(1 - output)\n",
     "\n",
     "# Gradient descent step\n",
     "def update_weights(x, y, weights, bias, learnrate):\n",
-    "    pass"
+    "    output = output_formula(x, weights, bias)\n",
+    "    weights += learnrate * (y - output) * x\n",
+    "    bias += learnrate *(y -output)\n",
+    "    return weights, bia"
    ]
   },
   {
