feat: May or not not have completed discriminator.

--- a/semi-supervised/semi-supervised_learning_2.ipynb
+++ b/semi-supervised/semi-supervised_learning_2.ipynb
@@ -313,10 +313,10 @@
     "        relu7 = tf.maximum(alpha * x7, x7)\n",
     "        \n",
     "        # Flatten it by global average pooling\n",
-    "        features = raise NotImplementedError()\n",
+    "        features = tf.reduce_mean(relu7, (1,2))\n",
     "        \n",
     "        # Set class_logits to be the inputs to a softmax distribution over the different classes\n",
-    "        raise NotImplementedError()\n",
+    "        class_logits = tf.layers.dense(features, num_classes + extra_classes)\n",
     "        \n",
     "        \n",
     "        # Set gan_logits such that P(input is real | input) = sigmoid(gan_logits).\n",
@@ -333,7 +333,7 @@
     "        # This trick and this value of m fix both those cases, but the naive implementation and\n",
     "        # other values of m encounter various problems)\n",
     "        \n",
-    "        raise NotImplementedError()\n",
+    " \n",
     "        \n",
     "        return out, class_logits, gan_logits, features"
    ]
