feat: Completed student admissions.

--- a/student-admissions/StudentAdmissions.ipynb
+++ b/student-admissions/StudentAdmissions.ipynb
@@ -651,11 +651,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples is 360\n",
+      "Number of testing samples is 40\n",
+      "     admit       gre       gpa  rank_1  rank_2  rank_3  rank_4\n",
+      "265      0  0.275862  0.620690       0       0       1       0\n",
+      "36       0  0.620690  0.568966       1       0       0       0\n",
+      "252      1  0.517241  1.000000       0       1       0       0\n",
+      "219      1  0.586207  0.764368       0       1       0       0\n",
+      "24       1  0.931034  0.626437       0       1       0       0\n",
+      "66       0  0.896552  0.781609       0       0       0       1\n",
+      "99       0  0.310345  0.603448       0       0       1       0\n",
+      "274      0  0.517241  0.494253       0       1       0       0\n",
+      "398      0  0.827586  0.798851       0       1       0       0\n",
+      "169      0  0.655172  0.781609       0       0       1       0\n",
+      "     admit       gre       gpa  rank_1  rank_2  rank_3  rank_4\n",
+      "9        0  0.827586  0.954023       0       1       0       0\n",
+      "46       1  0.620690  0.689655       0       1       0       0\n",
+      "53       1  0.793103  0.580460       0       1       0       0\n",
+      "55       1  0.896552  1.000000       0       0       1       0\n",
+      "57       0  0.275862  0.390805       0       0       1       0\n",
+      "72       0  0.448276  0.649425       0       0       0       1\n",
+      "83       0  0.275862  0.373563       0       0       0       1\n",
+      "100      0  0.206897  0.511494       0       0       1       0\n",
+      "106      1  0.827586  0.747126       1       0       0       0\n",
+      "119      0  0.206897  0.379310       0       0       1       0\n"
+     ]
+    }
+   ],
    "source": [
     "sample = np.random.choice(processed_data.index, size=int(len(processed_data)*0.9), replace=False)\n",
     "train_data, test_data = processed_data.iloc[sample], processed_data.drop(sample)\n",
@@ -676,11 +705,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          gre       gpa  rank_1  rank_2  rank_3  rank_4\n",
+      "265  0.275862  0.620690       0       0       1       0\n",
+      "36   0.620690  0.568966       1       0       0       0\n",
+      "252  0.517241  1.000000       0       1       0       0\n",
+      "219  0.586207  0.764368       0       1       0       0\n",
+      "24   0.931034  0.626437       0       1       0       0\n",
+      "66   0.896552  0.781609       0       0       0       1\n",
+      "99   0.310345  0.603448       0       0       1       0\n",
+      "274  0.517241  0.494253       0       1       0       0\n",
+      "398  0.827586  0.798851       0       1       0       0\n",
+      "169  0.655172  0.781609       0       0       1       0\n",
+      "265    0\n",
+      "36     0\n",
+      "252    1\n",
+      "219    1\n",
+      "24     1\n",
+      "66     0\n",
+      "99     0\n",
+      "274    0\n",
+      "398    0\n",
+      "169    0\n",
+      "Name: admit, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "features = train_data.drop('admit', axis=1)\n",
     "targets = train_data['admit']\n",
@@ -701,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -726,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -734,20 +790,56 @@
    "source": [
     "# TODO: Write the error term formula\n",
     "def error_term_formula(y, output):\n",
-    "    pass"
+    "    return -(y - output) * output * (1 - output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0\n",
+      "Train loss:  0.28154153048783714\n",
+      "=========\n",
+      "Epoch: 100\n",
+      "Train loss:  0.28162331712290867   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 200\n",
+      "Train loss:  0.28170518786280857   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 300\n",
+      "Train loss:  0.2817871427288499   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 400\n",
+      "Train loss:  0.2818691817421419   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 500\n",
+      "Train loss:  0.28195130492358533   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 600\n",
+      "Train loss:  0.28203351229387447   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 700\n",
+      "Train loss:  0.282115803873496   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 800\n",
+      "Train loss:  0.2821981796827295   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Epoch: 900\n",
+      "Train loss:  0.28228063974164336   WARNING - Loss Increasing\n",
+      "=========\n",
+      "Finished training!\n"
+     ]
+    }
+   ],
    "source": [
     "# Neural Network hyperparameters\n",
     "epochs = 1000\n",
-    "learnrate = 0.5\n",
+    "learnrate = 0.0001\n",
     "\n",
     "# Training function\n",
     "def train_nn(features, targets, epochs, learnrate):\n",
@@ -814,11 +906,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction accuracy: 0.575\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate accuracy on test data\n",
     "tes_out = sigmoid(np.dot(features_test, weights))\n",
