--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -79,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Number of negative labels to sample\n",
