--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -433,17 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: checkpoints: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If the checkpoints directory doesn't exist:\n",
     "!mkdir checkpoints"
@@ -470,7 +462,9 @@
       "Epoch 1/3 Iteration: 100 Avg. Training loss: 5.6535 0.8622 sec/batch\n",
       "Epoch 1/3 Iteration: 200 Avg. Training loss: 5.5921 1.0795 sec/batch\n",
       "Epoch 1/3 Iteration: 300 Avg. Training loss: 5.5318 0.8865 sec/batch\n",
-      "Epoch 1/3 Iteration: 400 Avg. Training loss: 5.6030 0.8442 sec/batch\n"
+      "Epoch 1/3 Iteration: 400 Avg. Training loss: 5.6030 0.8442 sec/batch\n",
+      "Epoch 1/3 Iteration: 500 Avg. Training loss: 5.5308 0.8819 sec/batch\n",
+      "Epoch 1/3 Iteration: 600 Avg. Training loss: 5.5652 0.8301 sec/batch\n"
      ]
     }
    ],
@@ -536,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with train_graph.as_default():\n",
@@ -587,7 +583,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(14, 14))\n",
