fix: minor updates.

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -493,11 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def fully_conn(x_tensor, num_outputs):\n",
     "    \"\"\"\n",
@@ -507,7 +513,7 @@
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return tf.\n",
+    "    return tf.contrib.layers.fully_connected(x_tensor, num_outputs)\n",
     "\n",
     "\n",
     "\"\"\"\n",
