started work on discriminator().

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -276,8 +276,9 @@
     "    :return: Tuple of (tensor output of the discriminator, tensor logits of the discriminator)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "\n",
-    "    return None, None\n",
+    "    tf.variable_scope()\n",
+    "    \n",
+    "    return output, logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
