feat: completed first pass at get_init_cell.

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,10 +335,10 @@
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
-    "    input_data = tf.placeholder(tf.int32, shape=[None,None], name='input')\n",
+    "    input_data = tf.placeholder(tf.int32, shape=[None, None], name='input')\n",
     "    targets = tf.placeholder(tf.int32, shape=[None, None], name='targets')\n",
     "    learn_rate = tf.placeholder(tf.float32)\n",
-    "    return (input_data, targets, learn_rate)\n",
+    "    return input_data, targets, learn_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -376,7 +376,12 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    num_units = rnn_size\n",
+    "    cells = [tf.contrib.rnn.BasicLSTMCell(num_units=n) for n in num_units]\n",
+    "    stacked_rnn_cell = tf.contrib.rnn.MultiRNNCell(cells)\n",
+    "    init_state = stacked_rnn_cell.zero_state(batch_size)\n",
+    "    init_state = tf.identity(init_state, name='initial_state')\n",
+    "    return cell, init_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
