feat: passed tests for get_init_cell().

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -362,11 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -376,10 +382,10 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    num_units = rnn_size\n",
-    "    cells = [tf.contrib.rnn.BasicLSTMCell(num_units=n) for n in num_units]\n",
-    "    stacked_rnn_cell = tf.contrib.rnn.MultiRNNCell(cells)\n",
-    "    init_state = stacked_rnn_cell.zero_state(batch_size)\n",
+    "    \n",
+    "    cell = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([cell] * 2)\n",
+    "    init_state = cell.zero_state(batch_size, tf.float32)\n",
     "    init_state = tf.identity(init_state, name='initial_state')\n",
     "    return cell, init_state\n",
     "\n",
@@ -415,7 +421,9 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    \n",
+    "    return embedded_input\n",
     "\n",
     "\n",
     "\"\"\"\n",
