feat: completed get_embed().

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -406,11 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -421,7 +427,8 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    \n",
+    "    embeds = tf.Variable(tf.random_uniform((vocab_size, embed_dim), minval=-1, maxval=1))\n",
+    "    embedded_input = tf.nn.embedding_lookup(embeds, input_data )\n",
     "    \n",
     "    return embedded_input\n",
     "\n",
